# sendgrid-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  diff.txt
.github/workflows/: ci.yml
examples/: main.rs  main_async.rs  v3.rs  v3_async.rs  v3_disable_tracking.rs
src/: client.rs  error.rs  errors.rs  lib.rs  mail.rs  main.rs  sg_async_client.rs  sg_client.rs  v3.rs  v3.rs.in
src/client/: mod.rs
src/mail/: mod.rs
src/sg_client/: mod.rs
src/v3/: clients.rs  message.rs  mod.rs
