[package]
name = "sendgrid"
version = "0.16.0"
edition = "2018"
authors = ["Garrett Squire <github@garrettsquire.com>"]
description = "An unofficial client library for the SendGrid API"
repository = "https://github.com/gsquire/sendgrid-rs"
license = "MIT"
homepage = "https://sendgrid.com"
keywords = ["email"]
documentation = "https://docs.rs/sendgrid"
readme = "README.md"

[dependencies]
data-encoding = "2.1"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["native-tls", "blocking"]

async = []
blocking = ["reqwest/blocking"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/default-tls"]

[[example]]
name = "v3_async"
required-features = ["async"]

[[example]]
name = "main"
required-features = ["blocking"]

[[example]]
name = "v3"
required-features = ["blocking"]
