[package]
name = "sendgrid"
version = "0.25.0"
edition = "2024"
authors = ["Garrett Squire <github@garrettsquire.com>"]
description = "An unofficial client library for the SendGrid API"
repository = "https://github.com/gsquire/sendgrid-rs"
license = "MIT"
homepage = "https://sendgrid.com"
keywords = ["email"]
documentation = "https://docs.rs/sendgrid"
readme = "README.md"

[dependencies]
data-encoding = "2.9"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["native-tls"]

blocking = ["reqwest/blocking"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/default-tls"]

[[example]]
name = "v3_async"

[[example]]
name = "main"
required-features = ["blocking"]

[[example]]
name = "v3"
required-features = ["blocking"]

[[example]]
name = "v3_disable_tracking"
required-features = ["blocking"]
