[package]
name = "sendgrid"
version = "0.26.0"
edition = "2024"
authors = ["Garrett Squire <github@garrettsquire.com>"]
description = "An unofficial client library for the SendGrid API"
repository = "https://github.com/gsquire/sendgrid-rs"
license = "MIT"
homepage = "https://sendgrid.com"
keywords = ["email"]
documentation = "https://docs.rs/sendgrid"
readme = "README.md"

[dependencies]
data-encoding = "2.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
blocking = ["reqwest/blocking"]
native-tls = ["reqwest/native-tls"]

[[example]]
name = "v3_async"

[[example]]
name = "main"
required-features = ["blocking"]

[[example]]
name = "v3"
required-features = ["blocking"]

[[example]]
name = "v3_disable_tracking"
required-features = ["blocking"]
